--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,24 @@
-Source: template-repository
-Section: unknown
+Source: templating-maven-plugin
+Section: java
 Priority: optional
-Maintainer: Tsic404 <liuheng@deepin.org>
-Build-Depends: debhelper (>= 11)
-Standards-Version: 4.1.3
-Homepage: https://github.com/deepin-community/template-repository
-#Vcs-Browser: https://salsa.debian.org/debian/deepin-community-template-repository
-#Vcs-Git: https://salsa.debian.org/debian/deepin-community-template-repository.git
+Maintainer: Debian Java Maintainers <pkg-java-maintainers@lists.alioth.debian.org>
+Uploaders: Mechtilde Stehmann <mechtilde@debian.org>
+Build-Depends: debhelper-compat (=13)
+ , default-jdk
+ , maven-debian-helper
+ , libmaven3-core-java
+ , libmaven-invoker-plugin-java
+Standards-Version: 4.6.2
+Rules-Requires-Root: no
+Vcs-Git: https://salsa.debian.org/java-team/templating-maven-plugin.git
+Vcs-Browser: https://salsa.debian.org/java-team/templating-maven-plugin
+Homepage: https://www.mojohaus.org/templating-maven-plugin/
 
-Package: template-repository
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Package: libtemplating-maven-plugin-java
+Architecture: all
+Depends: ${misc:Depends}
+Description: Copying files to an output directory
+ The templating maven plugin handles copying files from a source to a given
+ output directory, while filtering them. This plugin is useful to filter
+ Java Source Code if you need for example to have things in that code
+ replaced with some properties values.
